# protobuf

./: Cargo.toml  Makefile
cpp/: beeremote.pb.cc  beeremote.pb.h  flex.pb.cc  flex.pb.h
go/beeremote/: beeremote.pb.go  beeremote_grpc.pb.go  beeremote_protoopaque.pb.go
go/flex/: flex.pb.go  flex_protoopaque.pb.go
proto/: beeremote.proto  flex.proto
rust/: beegfs.rs  beeremote.rs  beewatch.rs  flex.rs  license.rs  management.rs
