[package]
name = "protobuf"
version = "0.0.0"
edition = "2021"

authors = ["ThinkparQ Development Team <development@thinkparq.com>"]
description = "BeeGFS Protobuf definitions"
readme = "README.md"
homepage = "https://github.com/thinkparq/protobuf"
publish = false

[dependencies]
# The version requirements of these must match the version requirement of protoc-rs used to
# generate the code
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

[lib]
path = "rust/lib.rs"
